<resources>
    <string name="action_close">Close</string>
    <string name="action_retry">Try again</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="msg_error_invalid_data">Kolom %s tidak valid. Column %s is not valid</string>
    <string name="msg_error_general_network">No internet connection, please try again later.</string>
    <string name="msg_error_general_not_found">Sorry, data is not found.</string>
    <string name="msg_error_general_auth">Please login to access this page</string>
    <string name="msg_error_general_unknown">An unknown error occurred.</string>
    <string name="msg_under_development">Sorry, this feature is under development.</string>
    <string name="text_version">Version %s</string>
    <string name="action_skip">Skip</string>
    <string name="action_choose_date">Choose Date</string>
    <string name="plain_home">Home</string>
    <string name="plain_history">History</string>
    <string name="plain_profile">Profile</string>
    <string name="title_greet">Hello, %s!</string>
    <string name="title_card_bmi">Calculate Your BMI Here</string>
    <string name="plain_select_unit">Select Unit</string>
    <string name="title_input_number">Input your numbers</string>
    <string name="title_input_n">Input n</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_height">Height</string>
    <string name="action_calculate_bmi">Calculate BMI</string>
    <string name="title_bmi_intro">BMI Introduction</string>
    <string name="plain_bmi_intro">BMI is a measurement of a person\'s leanness or corpulence based on their height and weight, and is intended to quantify tissue mass. It is widely used as a general indicator of whether a person has a healthy body weight for their height. Specifically, the value obtained from the calculation of BMI is used to categorize whether a person is underweight, normal weight, overweight, or obese depending on what range the value falls between. These ranges of BMI vary based on factors such as region and age, and are sometimes further divided into subcategories such as severely underweight or very severely obese. Being overweight or underweight can have significant health effects, so while BMI is an imperfect measure of healthy body weight, it is a useful indicator of whether any additional testing or action is required. Refer to the table below to see the different categories based on BMI that are used by the calculator.</string>
    <string name="plain_question_one">Create an app that calculate BMI</string>
    <string name="title_nth_smallest_number">Return N-th smallest number</string>
    <string name="plain_nth_smallest_number">Write a function that returns the N-th smallest number form an array input [5408, 6604, 32158, 84984, 8778, 34871]</string>
    <string name="hint_n">Input n</string>
    <string name="action_calculate_n">Calculate</string>
    <string name="title_calculate_bmi">Calculate Body Mass Index</string>
    <string name="title_return_nth_code">Get the code here</string>
    <string name="plain_return_nth_code">https://pl.kotl.in/hJb647j70</string>
    <string name="plain_body_mass_index">Body Mass Index</string>
</resources>